# RTData

./: .gitignore  Dockerfile  README.md  cmem_model_current_calc.ipynb  pyproject.toml
c2_api/: api_interface.py
float_utils/: cts_alerts_parser.py
plotting/: Gearth.py  cmems_data_download  cmems_kml.py  plots.py
rtdata/: config_template.py
rtdata/c2_api/: api_interface.py
rtdata/satellite_utils/: cmems_download_utils.py  cmems_kml_file_creation_utils.py  cmems_modcur_calc.py  cmems_modcur_calc_utils.py
