[tool.poetry]
name = "rtdata"
version = "0.1.0"
description = "A package to download and visualise RT data from autonomy"
authors = ["Flavien Petit <flavien.petit@obs-vlfr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
